--- a/index.html
+++ b/index.html
@@ -158,13 +158,7 @@
 			</section>
 			<section class="cover">
 				<a href="https://stampsy.com/na-elektrichkakh-do-baikala" class="cover__link cover__item" target="_blank">
-					<!--с разрешением 320px nbsp не читался и пришлось задать его в div, в случае с subtitle так сделать не получилось, так как отображение 
-                        этого текста на разных разрешениях разное, поэтому пришлось выбирать между 320px и всеми остальными разрешениями.-->
-					<h2 class="cover__title">
-						До Байкала
-						<div class="title-nbsp">&nbsp;</div>
-						«на собаках»
-					</h2>
+					<h2 class="cover__title">До Байкала «на собаках»</h2>
 					<p class="cover__subtitle">По мотивам учебной темы о Транссибе — путешествие от столицы до Байкала на электричках.</p>
 				</a>
 			</section>
