--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 				<img class="header__logo" src="./images/header-logo.svg" alt="Логотип карта России" />
 				<ul class="header__lang-links">
 					<li class="header__lang-link">
-						<a class="header__lang-link links-hover lang-link_selected" href="#">Ru</a>
+						<a class="header__lang-link links-hover lang-link_type_selected" href="#">Ru</a>
 					</li>
 					<li class="header__lang-link">
 						<a class="header__lang-link links-hover" href="#">En</a>
