--- a/index.html
+++ b/index.html
@@ -10,17 +10,15 @@
 		<!--заранее прошу прощения за небрежный код моментами, просто этот спринт дался мне очень трудно
             и тема адаптива в том числе, старался написать код максимально правильно-->
 		<header class="header content-container-header">
-			<nav class="header__nav">
-				<img class="header__logo" src="./images/header-logo.svg" alt="Логотип карта России" />
-				<ul class="header__lang-links">
-					<li class="header__lang-link">
-						<a class="header__lang-link links-hover header__lang-link_selected" href="#">Ru</a>
-					</li>
-					<li class="header__lang-link">
-						<a class="header__lang-link links-hover" href="#">En</a>
-					</li>
-				</ul>
-			</nav>
+			<img class="header__logo" src="./images/header-logo.svg" alt="Логотип карта России" />
+			<ul class="header__lang-links">
+				<li class="header__lang-link-element">
+					<a class="header__lang-link links-hover header__lang-link_selected" href="#">Ru</a>
+				</li>
+				<li class="header__lang-link-element">
+					<a class="header__lang-link links-hover" href="#">En</a>
+				</li>
+			</ul>
 		</header>
 		<main class="content">
 			<section class="lead">
@@ -29,7 +27,7 @@
 				<img class="lead__main-illustration" src="./images/lead-polka.jpg" alt="Декоративное изображение с картой поездки и поездом" />
 				<p class="lead__caption">ваша полка — верхняя</p>
 			</section>
-			<section class="intro content-container">
+			<section class="intro">
 				<h2 class="intro__title">Чего мы там не видели?</h2>
 				<p class="intro__text">
 					По опросам ВЦИОМ, 95% россиян мечтают куда-нибудь поехать, но только 36% планируют провести отпуск в родной стране. Мол, чего мы тут, дома, не видели? На самом деле, Россия — это целая вселенная с ласковым морем юга,
@@ -59,7 +57,7 @@
 					</li>
 				</ul>
 			</section>
-			<section class="photo-grid content-container">
+			<section class="photo-grid">
 				<img src="./images/photo-grid-train.jpg" alt="Фото из поезда" class="photo-grid__item" />
 				<img src="./images/photo-grid-atharva-tulsi.jpg" alt="Фото гор в снегу" class="photo-grid__item" />
 				<img src="./images/photo-grid-tuman.jpg" alt="Фото собаки в тумане" class="photo-grid__item" />
@@ -73,11 +71,11 @@
 				<img src="./images/photo-grid-baikal-2.jpg" alt="Фото озера Байкал и гор" class="photo-grid__item" />
 				<img src="./images/photo-grid-ergaki.jpg" alt="Фото гор в тумане" class="photo-grid__item" />
 			</section>
-			<section class="places content-container-places">
+			<section class="places">
 				<article class="place">
 					<h2 class="place__header">Куршская коса</h2>
 					<div class="place__links">
-						<span class="place__url-heading">URL</span>
+						<span class="place__url-heading">url</span>
 						<a class="place__link links-hover" href="http://park-kosa.ru" target="_blank">park-kosa.ru</a>
 					</div>
 					<img src="./images/place-kosa.jpg" alt="Фотография места Куршская коса" class="place__image" />
@@ -157,13 +155,13 @@
 				</article>
 			</section>
 			<section class="cover">
-				<a href="https://stampsy.com/na-elektrichkakh-do-baikala" class="cover__link cover__item" target="_blank">
+				<a href="https://stampsy.com/na-elektrichkakh-do-baikala" class="cover__item" target="_blank">
 					<h2 class="cover__title">До Байкала «на собаках»</h2>
 					<p class="cover__subtitle">По мотивам учебной темы о Транссибе — путешествие от столицы до Байкала на электричках.</p>
 				</a>
 			</section>
 		</main>
-		<footer class="footer content-container">
+		<footer class="footer">
 			<nav class="footer__links">
 				<a class="footer__link links-hover" href="https://yandex.ru/maps" target="_blank">Карты</a>
 				<a class="footer__link links-hover" href="https://yandex.ru/pogoda" target="_blank">Погода</a>
@@ -171,9 +169,7 @@
 				<a class="footer__link links-hover" href="https://calendar.yandex.ru" target="_blank">Календарь</a>
 				<a class="footer__link links-hover" href="https://travel.yandex.ru" target="_blank">Путешествия</a>
 			</nav>
-			<div class="footer__content">
 				<p class="footer__copyright">© 2022. Марсэль</p>
-			</div>
 		</footer>
 	</body>
 </html>
