--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 	<body class="root">
 		<!--заранее прошу прощения за небрежный код моментами, просто этот спринт дался мне очень трудно
             и тема адаптива в том числе, старался написать код максимально правильно-->
-		<header class="header content-container-header">
+		<header class="header">
 			<img class="header__logo" src="./images/header-logo.svg" alt="Логотип карта России" />
 			<ul class="header__lang-links">
 				<li class="header__lang-link-element">
